[metadata]
name = riot-auth
version = attr: riot_auth.__version__
author = floxay
description = "A library to get various Riot tokens and get around Cloudflare's filter during auth."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/floxay/python-riot-auth
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers

    Operating System :: POSIX
    Operating System :: MacOS X
    Operating System :: Microsoft :: Windows

    License :: OSI Approved :: MIT License

    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    aiohttp >= 3.7.0
python_requires = >=3.6

[options.packages.find]
exclude =
  examples
